# wifi-telemetry

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: CODEOWNERS  pull_request_template.md
cmake/: FindLTTngUST.cmake  find_pthreads.cmake  find_sdbus-cpp.cmake  find_systemd.cmake  find_tracelogging.cmake  wifi-telemetry-config.cmake
include/wifi-telemetry/: wifi_interface_configuration.hpp  wifi_telemetry_monitor.hpp  wifi_telemetry_source.hpp  wifi_telemetry_source_instance.hpp  wifi_telemetry_source_wpa.hpp  wifi_telemetry_source_ztpd.hpp
include/wifi-telemetry/wifi/: wifi_80211.hpp  wifi_80211_format_mac.hpp  wifi_common.hpp  wifi_dpp.hpp  wifi_dpp_exchange.hpp  wifi_telemetry_80211.hpp
include/wifi-telemetry/wpa/: wifi_telemetry_input_station_connection_attempt.hpp  wpa_command.hpp  wpa_command_bss.hpp  wpa_command_key_value_pair.hpp  wpa_command_response.hpp  wpa_command_response_parser.hpp  wpa_command_signal_poll.hpp  wpa_command_status.hpp  wpa_commands.hpp  wpa_controller.hpp  wpa_event.hpp  wpa_event_association_rejected.hpp  wpa_event_authentication_rejected.hpp  wpa_event_connected.hpp  wpa_event_disconnected.hpp  wpa_event_dpp_auth_init_failure.hpp  wpa_event_dpp_auth_success.hpp  wpa_event_dpp_chirp_received.hpp  wpa_event_dpp_conf_received.hpp  wpa_event_dpp_conf_sent.hpp  wpa_event_dpp_failure.hpp  wpa_event_dpp_frame_transmit_status.hpp  wpa_event_handler.hpp  wpa_event_network_not_found.hpp  wpa_events.hpp  wpa_interface_info.hpp  wpa_state.hpp
scripts/: release-wifi-telemetryd.sh
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  main.cxx
src/daemon/systemd/: CMakeLists.txt  wifi-telemetryd-ap@.service.in  wifi-telemetryd-station@.service.in  wifi-telemetryd-ztp.service.in
src/lib/: CMakeLists.txt  wifi_device_info.cxx  wifi_device_info.hpp  wifi_telemetry_instance_impl.cxx  wifi_telemetry_instance_impl.hpp  wifi_telemetry_monitor.cxx  wifi_telemetry_source.cxx  wifi_telemetry_source_wpa.cxx  wifi_telemetry_source_ztpd.cxx
src/lib/lttng-providers/: CMakeLists.txt  wifi_telemetry_lttng_provider_dpp.cxx  wifi_telemetry_lttng_provider_dpp.hpp  wifi_telemetry_lttng_provider_station.cxx  wifi_telemetry_lttng_provider_station.hpp  wifi_telemetry_lttng_provider_wifi.cxx  wifi_telemetry_lttng_provider_wifi.hpp  wifi_telemetry_trace.cxx  wifi_telemetry_trace.hpp  wifi_telemetry_trace_dpp.cxx  wifi_telemetry_trace_dpp.hpp  wifi_telemetry_trace_station.cxx  wifi_telemetry_trace_station.hpp  wifi_telemetry_trace_wifi.cxx  wifi_telemetry_trace_wifi.hpp  wifi_telemetry_tracelogging.hpp
src/lib/wpa/: CMakeLists.txt  wifi_telemetry_input_station_connection_attempt.cxx  wpa_command.cxx  wpa_command_bss.cxx  wpa_command_key_value_pair.cxx  wpa_command_response.cxx  wpa_command_response_parser.cxx  wpa_command_signal_poll.cxx  wpa_command_status.cxx  wpa_controller.cxx  wpa_event.cxx  wpa_event_association_rejected.cxx  wpa_event_authentication_rejected.cxx  wpa_event_connected.cxx  wpa_event_disconnected.cxx  wpa_event_dpp_auth_init_failure.cxx  wpa_event_dpp_auth_success.cxx  wpa_event_dpp_chirp_received.cxx  wpa_event_dpp_conf_received.cxx  wpa_event_dpp_conf_sent.cxx  wpa_event_dpp_failure.cxx  wpa_event_dpp_frame_transmit_status.cxx  wpa_event_handler.cxx  wpa_event_network_not_found.cxx  wpa_event_parser.cxx  wpa_event_parser.hpp  wpa_state.cxx
src/lib/ztpd/: CMakeLists.txt
